# Maker-Stash

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  START.md  start-prod.sh  start.bat  start.py  start.sh  stop.bat  stop.py  stop.sh  update-prod.sh
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260514_0001_initial_schema.py  20260516_0002_attachment_thumbnails.py  20260519_0003_quantity_non_negative.py  20260519_0004_idempotency_audit.py  20260519_0005_task_jobs.py  20260519_0006_workflow_plans.py  20260522_0007_cover_attachment_integrity.py  20260527_0008_location_containers.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/cli/: client.py  config.py  main.py
backend/app/core/: config.py  database.py  errors.py  request_context.py  response.py  security.py
backend/app/models/: __init__.py  alias.py  api_token.py  attachment.py  attribute.py  audit.py  backup.py  category.py  identifier.py  item.py  location.py  mixins.py  note.py  system_setting.py  tag.py  task.py  workflow.py
backend/app/repositories/: base.py
backend/app/schemas/: attachment.py  attribute.py  backup.py  category.py  common.py  item.py  location.py  metadata.py  task.py  token.py  workflow.py
backend/app/scripts/: create_token.py  init_db.py
backend/docs/: api_technical_manual.md  cli_technical_manual.md  decisions.md
backend/tests/: conftest.py  test_cli_commands.py  test_cli_config.py  test_cli_http_calls.py  test_core_flows.py
docs/: CLAUDE.md  (+1 more)
(+114 files in other folders)
