[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-stash-backend"
version = "0.1.0"
description = "Personal workshop inventory backend and CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "click==8.3.3",
    "Pillow==11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "setuptools==80.9.0",
]

[project.scripts]
stash = "app.cli.main:cli"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
